feat: finalizando módulo de consultoria
